--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -53,6 +53,8 @@
             "class<code>": " 󰨞",
             "class<kitty>" : " ",
             "dolphin": " ",
+            "yazi": " ",
+            "class<spotify>": " ",
 	    },
         "persistent-workspaces" : {
             "*" : 5
@@ -91,6 +93,11 @@
         "hyprland/language",
         "clock",
     ],
+
+    "modules-left": [
+        "cpu",
+        "memory",
+    ],
    
     "clock": {
         "interval" : 20,
@@ -123,6 +130,28 @@
         "format-wifi": "{essid} | {signalStrength}% {icon} | 󰕒 {bandwidthUpBytes} 󰇚 {bandwidthDownBytes}",
         "format-icons": [ "󰤯", "󰤟", "󰤢", "󰤥", "󰤨" ],
         "format-disconnected": "󰤮"
-    }
+    },
+
+    "cpu": {
+        "interval": 10,
+        "tooltip": false,
+        "format": " {avg_frequency} GHz | {icon0}{icon1}{icon2}{icon4}{icon5}{icon6}{icon7}{icon8}{icon9}{icon10}{icon11}{icon12}{icon13}{icon14}{icon15}{icon16}{icon17}{icon18}{icon19}",
+        "format-icons": [
+            "<span color='#252535'>▁</span>",
+            "<span color='#252535'>▂</span>",
+            "<span color='#2B3328'>▃</span>",
+            "<span color='#2B3328'>▄</span>",
+            "<span color='#49443C'>▅</span>",
+            "<span color='#49443C'>▆</span>",
+            "<span color='#43242B'>▇</span>",
+            "<span color='#43242B'>█</span>",
+        ],
+    },
+
+    "memory": {
+        "invertal": 30,
+        "tooltip":false,
+        "format": "{used:0.1f}G/{total:0.1f}G   | {swapUsed:0.1f}/{swapTotal:0.1f} 󰓡",
+    },
 
 }]
