--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -53,8 +53,9 @@
             "class<code>": " 󰨞",
             "class<kitty>" : " ",
             "dolphin": " ",
-            "yazi": " ",
+            "title<.*yazi.*>": " ",
             "class<spotify>": " ",
+            "title<.*nvim.*>": " ",
 	    },
         "persistent-workspaces" : {
             "*" : 5
@@ -98,6 +99,10 @@
         "cpu",
         "memory",
     ],
+
+    "modules-center": [
+        "hyprland/window",
+    ],
    
     "clock": {
         "interval" : 20,
@@ -135,16 +140,16 @@
     "cpu": {
         "interval": 10,
         "tooltip": false,
-        "format": " {avg_frequency} GHz | {icon0}{icon1}{icon2}{icon4}{icon5}{icon6}{icon7}{icon8}{icon9}{icon10}{icon11}{icon12}{icon13}{icon14}{icon15}{icon16}{icon17}{icon18}{icon19}",
+        "format": " {avg_frequency:0.2f} GHz | {icon0}{icon1}{icon2}{icon4}{icon5}{icon6}{icon7}{icon8}{icon9}{icon10}{icon11}{icon12}{icon13}{icon14}{icon15}{icon16}{icon17}{icon18}{icon19}",
         "format-icons": [
-            "<span color='#252535'>▁</span>",
-            "<span color='#252535'>▂</span>",
-            "<span color='#2B3328'>▃</span>",
-            "<span color='#2B3328'>▄</span>",
-            "<span color='#49443C'>▅</span>",
-            "<span color='#49443C'>▆</span>",
-            "<span color='#43242B'>▇</span>",
-            "<span color='#43242B'>█</span>",
+            "<span color='#948979'>▁</span>",
+            "<span color='#948979'>▂</span>",
+            "<span color='#128912'>▃</span>",
+            "<span color='#128912'>▄</span>",
+            "<span color='#898912'>▅</span>",
+            "<span color='#898912'>▆</span>",
+            "<span color='#891212'>▇</span>",
+            "<span color='#891212'>█</span>",
         ],
     },
 
@@ -153,5 +158,9 @@
         "tooltip":false,
         "format": "{used:0.1f}G/{total:0.1f}G   | {swapUsed:0.1f}/{swapTotal:0.1f} 󰓡",
     },
+
+    "hyprland/window": {
+        "format": "{class} {title}"
+    }
 
 }]
