Improvements in the workflow.

--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -1,4 +1,5 @@
 [{
+    "reload_style_on_change": true,
     "layer": "top",
     "position": "top",
     //"height": 30,
@@ -31,18 +32,18 @@
         "format" : " {icon}{windows} ",
         "sort-by" : "number",
         "format-icons" : {
-            "1" : "\u4e00",
-            "2" : "\u4e8c",
-            "3" : "\u4e09",
-            "4" : "\u56db",
-            "5" : "\u4e94",
-            "6" : "\u516d",
-            "7" : "\u4e03",
-            "8" : "\u516b",
-            "9" : "\u4e5d",
-            "10" :"\u5341",
-            "default" : "\u4ebf",
-            "special" : "\u4ebf",
+            "1" : " \u4e00 ",
+            "2" : " \u4e8c ",
+            "3" : " \u4e09 ",
+            "4" : " \u56db ",
+            "5" : " \u4e94 ",
+            "6" : " \u516d ",
+            "7" : " \u4e03 ",
+            "8" : " \u516b ",
+            "9" : " \u4e5d ",
+            "10" :" \u5341 ",
+            "default" : " \u4ebf ",
+            "special" : " \u4ebf ",
         },
         "format-window-separator" : " |",
         "window-rewrite-default" : " 󱂬",
@@ -84,6 +85,7 @@
     
 },
 {
+    "reload_style_on_change": true,
     "layer": "top",
     "position": "bottom",
     "spacing": 4,
